# Gal-Friday2

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cleanup_Git_Guide.md  Consolidated TODOs and Areas Requiring Attention for Gal-Friday2.md  Dockerfile  ERA001_Action_Plan.md  ERA001_PR_Description.md  ERA001_Phase1_Summary.md  ERA001_Phase2_Plan.md  Error Summary By Module.md  FEATURE_ENGINE_DESIGN.MD  FEATURE_ENGINE_DESIGN.md  Gal-Friday2 Outstanding For Now Implementations.md  GitHub_Auth_Setup_Guide.md  Makefile  README.md  Ruff Analysis v1.md  TESTING.md  TODO_SUMMARY.md  conftest.py  docker-compose.development.yml  docker-compose.test.yml  docker-compose.yml  for now.md  gal_friday_analysis.md  generate_ddl.py  mypy.ini  new_ruff_violations.txt  prompt  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  ruff_errors.txt  ruff_errors_after_fixes_2.txt  ruff_errors_after_fixes_3.txt  (+5 more)
.cursor/rules/: architecture_adherence.mdc  database_interaction.mdc  general_python_guidelines.mdc  kraken_api_interaction.mdc
.github/workflows/: ci.yml  code-quality.yml  python-ci-cd.yml  python-tests.yml
Gal2 Placeholder Project/:  Claude Opus Responses.md  Gal-Friday2 Outstanding For Now Implementations.md  Refactoring Complete Summary.md
Gal2 Placeholder Project/Critical/: APIDataProvider Not Implemented.md  DatabaseDataProvider Not Implemented.md
Gal2 Placeholder Project/High/: BacktestingEngine Stub Classes.md  Monitoring Dashboard Mock Data.md  Strategy Selection DAL Integration.md  TA-Lib Integration Placeholder.md
Gal2 Placeholder Project/Low/: Minor Implementation Details.md  Test Code in Production Files.md  Test Simplification.md
Gal2 Placeholder Project/Medium/: Execution Handler Enhancements.md  Experiment Management.md  Feature Engine Simplifications.md  Main Module Simplifications.md  Migration Manager.md  Model Return Type Placeholders.md  Monitoring Enhancements.md  Order Position Integration.md  Position Manager Assumptions.md  Reconciliation Service.md  Simplified Market Price Service.md  Simulated Execution Handler.md  WebSocket Client.md
TODO/: AI_Agent_Handoff_Prompt.md  Action_Plan_Next_Steps.md  Consolidated TODOs and Areas Requiring Attention for Gal-Friday2.md  IMPLEMENTATION_GUIDE.md  Quick_Reference_Remaining_Work.md  Session_Summary_ExecutionHandler_WebSocket_Implementation.md  gal_friday_analysis.md
TODO/backtesting_engine/: L89_backtesting_framework.md
TODO/cli_service/: L868_main_guard.md
TODO/cli_service_mocks/: L46-78_placeholder_mock_classes.md
TODO/config_validator/: L142_placeholder_warning.md
TODO/dashboard_service/: L178_real_time_dashboard.md
TODO/execution_handler/: L1115_exchange_adapter.md  L3075_async_order_processing.md  L317_kraken_adapter.md  L550_configurable_cancellation.md  L551_order_state_tracking.md
TODO/execution_handler.py/: Psudocode ExecutionHandler Adapter Pattern.md  Psudocode ExecutionHandler Websocket State & ID Mapping.md
TODO/execution_handler_interface/: L147-148_expand_typeddict.md
TODO/experiment_manager/: L230_unsubscribe_logic.md
TODO/feature_engine/: L234_feature_extraction.md  L92-93_feature_spec_fields.md  L92_feature_spec_fields.md
TODO/feature_models/: L49_optional_feature_handling.md
TODO/talib_stubs/: L1_stub.md  (+2 more)
config/: config.example.yaml  config.yaml  feature_registry.yaml  imputation_config.json  ml_pipeline_example.yaml  monitoring_metrics_example.yaml  prediction_interpretation_config.json  validation_config.json
docs/: Development_Tooling.md  Enterprise_Strategy_Arbitrator_Configuration.md  EventTypeResolution.md  Test_Suite_Overhaul_Plan.md  cli_service_enhanced.md  comprehensive_backtesting_framework.md  enhanced_mock_classes.md  execution_event_implementation.md  feature_models_implementation.md  post_mvp_plan_gal_friday_v0.1.md  reconciliation_strategies.md  technical_analysis_feature_engine_integration.md  technical_analysis_migration.md
examples/: cli_service_example.py  comprehensive_backtest_example.py  enhanced_mock_usage_example.py  execution_event_example.py  ml_pipeline_example.py  reconciliation_config_example.yaml  stage_management_demo.py  stage_management_simple_demo.py  technical_analysis_demo.py
gal_friday/: __init__.py  backtest_historical_data_provider.py  backtesting_components.py  backtesting_engine.py  cli_service.py  cli_service_mocks.py  config_manager.py  data_ingestor.py  database.py  event_bus.py  exceptions.py  exchange_info_service.py  execution_handler.py  execution_handler_enhancements.py  execution_handler_summary.md  feature_engine.py  feature_engine.py.corrupted_backup  feature_engine_enhancements.py  feature_imputation.py  feature_repo.py  health_check.py  historical_data_service.py  kraken_historical_data_service.py  logger_service.py  main.py  market_price_service.py  market_price_service_enhancements.py  ml_prediction_pipeline.py  model_registry.py  model_return_types_summary.md  monitoring_service.py  portfolio_manager.py  prediction_service.py  pubsub_manager.py  risk_manager.py  simulated_execution_handler.py  simulated_market_price_service.py  strategy_arbitrator.py  strategy_position_tracker.py  strategy_selection.py  (+4 more)
scripts/: deploy.sh  mypy_by_file.py  train_initial_model.py
tests/: README.md  TESTING.md  __init__.py  conftest.py  test_alert_notifications.py  test_backtesting_engine.py  test_config_manager.py  test_data_ingestion.py  test_data_ingestor.py  test_end_to_end_integration.py  test_event_bus.py  test_execution_handler.py  test_feature_engine.py  test_halt_mechanism.py  test_integration.py  test_intelligence_layer_demo.py  test_kraken_historical_data_service.py  test_market_price_from_event.py  test_market_price_service.py  test_model_registry.py  test_model_registry_simple.py  test_performance.py  test_placeholder.py  test_portfolio_manager.py  test_prediction_service.py  test_risk_management.py  test_risk_manager.py  test_strategy_arbitrator.py  test_strategy_selection_context.py  test_trading_system_integration.py  test_websocket_demo.py
(+455 files in other folders)
